--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.8.6",
     "react-native-vector-icons": "^6.5.0",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
     "styled-components": "^4.3.1"
   },
   "scripts": {
