--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immer": "^3.1.3",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-native-vector-icons": "^6.5.0",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
-    "styled-components": "^4.3.1"
+    "styled-components": "^4.3.2",
+    "use-immer": "^0.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.1"
   }
 }
